# GAMELENS

./: .gitignore  app.py  estructura.txt  pyproject.toml
Agentes/: analista.py
db/: predictor.py  queries.py
notebooks/: 01_Extracion_IGDB.ipynb  02_Extraccion_ID_Steam.ipynb  03_Extraccion_reseñas.ipynb  04_Extracion_ID_ITAD.ipynb  05_how_long_to_beat.ipynb  10_Analisis_de_reseñas.ipynb  10_Analisis_de_reseñas_V2.ipynb  11_Analisis_Descuentos.ipynb
ui/: buscador.py  detalle.py
