[project]
name = "gamelens"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "emoji>=2.15.0",
    "gensim>=4.4.0",
    "hdbscan>=0.8.42",
    "howlongtobeatpy>=1.0.21",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "langdetect>=1.0.9",
    "langid>=1.1.6",
    "matplotlib>=3.10.8",
    "nltk>=3.9.4",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "pyarrow>=23.0.1",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "streamlit>=1.56.0",
    "thefuzz>=0.22.1",
    "umap-learn>=0.5.12",
    "xgboost>=3.2.0",
]
